2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>

	* TorrentCreator.cs: Fix a lot of build warnings

2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>

	* TorrentCreator.cs: When creating a singlefile torrent, correctly
	generate the Torrent.Path property.

2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>

	* TorrentFile.cs: Print out the full path, not just the filename

2008-05-31  Alan McGovern <alan.mcgovern@gmail.com> 

	* SpeedMonitor.cs: SpeedMonitor should be public

2008-05-11  Alan McGovern <alan.mcgovern@gmail.com> 

	* SHA1Fast.cs: Updated the SHA1 code to mirror the recent changes in
	  the mono implementation.

2008-03-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* SpeedMonitor.cs: Fixed bug where speeds weren't being reset.

2008-02-02  Alan McGovern <alan.mcgovern@gmail.com> 

	* Enums.cs: Removed useless enums

2008-02-01  Alan McGovern <alan.mcgovern@gmail.com> 

	* AssemblyInfo.cs: UPdated prebuild file
