@@ -1,5 +1,11 @@
 2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>
 
+	* TorrentCreator.cs: Fix the multi-file torrent test. Add a new
+	single-file torrent test. Disable a test which doesn't work right.
+	Fixes a bug creating single-file torrents.
+
+2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>
+
 	* TorrentCreator.cs: Fix a lot of build warnings
 
 2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>
